--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
