--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "portf",
+  "homepage": "https://shiva-129.github.io/portfolioo/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "deploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
